fixed spacings on the public pages

--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -2,14 +2,15 @@
   background-color: rgb(58, 118, 137);
   display: flex;
   align-items: center;
-  position: fixed;
   width: 100%;
   height: 9.5vh;
   padding: 10px;
+  margin-bottom: 50px;
 }
 
 .logo{
   color: white;
+  margin-left: 20px;
 }
 
 .navbar {
