--- a/src/pages/public/Main/about.css
+++ b/src/pages/public/Main/about.css
@@ -6,7 +6,6 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 20px;
-    margin: 20px;
     background-color: #f0f0f0;
   }
   
