--- a/src/pages/public/Main/home.css
+++ b/src/pages/public/Main/home.css
@@ -16,7 +16,6 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    margin-top: 50px;
     gap: 20px;
   }
   
